--- a/OnTheMap/Views/Base.lproj/Main.storyboard
+++ b/OnTheMap/Views/Base.lproj/Main.storyboard
@@ -522,6 +522,51 @@
             </objects>
             <point key="canvasLocation" x="3153.6231884057975" y="136.60714285714286"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="gEp-Is-caU">
+            <objects>
+                <viewController storyboardIdentifier="ActivityIndicatorViewController" id="Hgu-qk-bJS" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="coM-Hg-R1k">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GmE-vM-af6">
+                                <rect key="frame" x="57" y="404.5" width="300" height="97.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PV9-2z-mcy">
+                                        <rect key="frame" x="16" y="16" width="268" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="SsN-sh-12A">
+                                        <rect key="frame" x="16" y="44.5" width="268" height="37"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="QeR-bP-CMX"/>
+                                </constraints>
+                                <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lD3-Yc-Tgg"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.69512905135214775" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="GmE-vM-af6" firstAttribute="centerX" secondItem="lD3-Yc-Tgg" secondAttribute="centerX" id="S72-rE-K2m"/>
+                            <constraint firstItem="GmE-vM-af6" firstAttribute="centerY" secondItem="lD3-Yc-Tgg" secondAttribute="centerY" id="gx4-KT-qXZ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CZW-H3-IDj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3957" y="137"/>
+        </scene>
     </scenes>
     <resources>
         <image name="list.dash" catalog="system" width="128" height="85"/>
